# Ansible

./: README.md  Сравнение.xlsx
Lesson3/examples/inventory/: hosts.yml
Lesson3/wordpress/inventory/: hosts.yml
Lesson3/wordpress/vars/: wordpress.yml
Lesson4/wordpress/: wordpress.yml
Lesson4/wordpress/inventory/: hosts.yml
Lesson4/wordpress/vars/: wordpress.yml  wordpress_vault.yml
Lesson5/vagrant1/: ansible.cfg  hosts.yml
Lesson5/vagrant3/: Vagrantfile  ansible.cfg  hosts.yml
Lesson6/project1/: Vagrantfile  ansible.cfg
Lesson6/project1/inventory/: hosts.yml
Lesson6/project1/roles/: vagrant.yml
Lesson7-8/wordpress/: Vagrantfile  ansible.cfg  wordpress.yml
Lesson7-8/wordpress/inventory/: hosts.yml
Lesson7-8/wordpress/vars/: wordpress.yml
doom/ansible/: inventory.ini  pyproject.toml  readme.txt
doom/ansible/playbooks/cluster/: cluster-init.yml  install-dep.yml  prepare.yml  worker-init.yml
doom/ansible/playbooks/stacks/: drone-deploy.yml  gitea-deploy.yml  hirus-deploy.yml  prometheus-deploy.yml  swarmpit-deploy.yml  traefik-deploy.yml  yt-deploy.yml
doom/ansible/playbooks/stacks/configs/prom/: prometheus.yml.j2
doom/ansible/playbooks/stacks/deploys/: drone.yml.j2  gitea.yml.j2  hirus.yml.j2  jetbrains.yml.j2  mon.yml.j2  swarmpit.yml.j2  traefik.yml.j2  yt.yml.j2
doom/ansible/playbooks/tls/: change-docker-systemd-service.yml  copy-client-cert-to-local.yml  init-ca-cert.yml  init-client-cert.yml  init-server-cert.yml
doom/ansible/secrets/: secrets.inc
doom/ansible/vars/: host_vars.yml  prom-vars.yml
(+25 files in other folders)
