[tool.poetry]
name = "doom-swarm"
version = "0.1.0"
description = "Doom-Swarm"
authors = ["darkman <darkman@meganet.ru>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^8.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
